--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,8 +4,8 @@
         <title>Web page #1!</title>
       </head>
       <body>
-        <h1>My first web page</h1>
-        <h2>Written with the guidance of Moringa Prep</h2>
+      <p>This is my <strong>first web page</strong>!</p>
+      <h2>Written with the guidance of <em>Moringa School</em></h2>
 
         <p>This is my first web page!</p>
         <p>Isn't it nice?</p>
