--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -7,7 +7,7 @@
       <p>This is my <strong>first web page</strong>!</p>
       <h2>Written with the guidance of <em>Moringa School</em></h2>
 
-        <p>This is my first web page!</p>
+        <p>This is my first web page!</p> <img src="IMG_20170404_211658.jpg" alt="a photo of coolest mobile phone">
         <p>Isn't it nice?</p>
 
         <p>Here are some things I'm going to learn about coding: </p>
@@ -19,3 +19,7 @@
         <ul>
       </body>
     </html>
+
+
+<p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
+<img src="img/IMG_21070404_211658.jpg" alt="a photo of coolest mobile phone">
