--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -6,7 +6,7 @@
 
       </head>
       <body>
-      <p>This is my <strong>first web page</strong>!</p>
+      <p>This is my <span>first web page!</span></p>
       <h2>Written with the guidance of <em>Moringa School</em></h2>
       <p>I like coding because I find it being <strong>fun</strong></p>
       <p>We can teach ourselves how to code <em>effectively</em></p>
