--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -2,11 +2,10 @@
     <html>
       <head>
         <link href="styles.css" rel="stylesheet" type="text/css">
-        <title>Web page #1!</title>
-
+          <title>Web page #1!</title>
       </head>
       <body>
-      <p>This is my <span>first web page!</span></p>
+      <h1>THIS IS MY <strong>FIRST</strong> WEB PAGE</h1>
       <h2>Written with the guidance of <em>Moringa School</em></h2>
       <p>I like coding because I find it being <strong>fun</strong></p>
       <p>We can teach ourselves how to code <em>effectively</em></p>
@@ -19,6 +18,8 @@
           <li>CSS</li>
           <li>JavaScript</li>
           <li>And alot more!</li>
-        <ul>
+      <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
+      <p>Check out <a href="http://www.my-first-webpage.com/">first web page</a></p>
+        </ul>
       </body>
     </html>
